projects/vb6parse/snapshots/parsers/cst/library/objects/getobject/getobject_with_application.snap
---
source: projects/vb6parse/tests/library/objects/getobject.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: SetStatement
      children:
        - kind: SetKeyword
          text: Set
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: xlApp
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: MemberAccessExpression
          children:
            - kind: CallExpression
              children:
                - kind: Identifier
                  text: GetObject
                - kind: LeftParenthesis
                  text: (
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: filePath
                - kind: RightParenthesis
                  text: )
            - kind: PeriodOperator
              text: "."
            - kind: Identifier
              text: Application
